feat: 장비 상세 & 조회수 카운팅 로직 구현 with redis cache